--- a/page1.html
+++ b/page1.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page1</title>
+    <title>Plastic Playing</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Page1</h1>
+<body class=".page1">
+    <table border="4px" align="center">
+        <th><a href="page1.html">Plastic PLaying</th>
+        <th><a href="page2.html">Famicom</th>
+        <th><a href="page3.html">GameBoy Pocket</th>
+        <th><a href="page4.html">3DS</th>
+        <th><a href="page5.html">Nintendo Switch</th>
+        <tr>
+            <td>1953</td>
+            <td>1983</td>
+            <td>1996</td>
+            <td>2011</td>
+            <td>2017</td>
+        </tr>
+    </table>
+        <h1 align="center" class="heading" >Plastic Playing</h1>
+        <a href="https://www.amazon.com/Nintendo-Super-Mario-Standard-Playing/dp/B003PDUQBW"><img src="https://www.amazon.com/Nintendo-Super-Mario-Standard-Playing/dp/B003PDUQBW" width="200" height="200">
+       </a>
 </body>
 </html>
