--- a/page3.html
+++ b/page3.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page3</title>
+    <title>GameBoy Pocket</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Page3</h1>
+<body class=".page3">
+    <table border="4px" align="center">
+        <th><a href="page1.html">Plastic PLaying</th>
+        <th><a href="page2.html">Famicom</th>
+        <th><a href="page3.html">GameBoy Pocket</th>
+        <th><a href="page4.html">3DS</th>
+        <th><a href="page5.html">Nintendo Switch</th>
+        <tr>
+            <td>1953</td>
+            <td>1983</td>
+            <td>1996</td>
+            <td>2011</td>
+            <td>2017</td>
+        </tr>
+    </table>    
+        <h1 align="center" class="heading">GameBoy Pocket</h1>
+        <a href="https://www.pricecharting.com/game/gameboy/blue-game-boy-pocket"><img src="https://www.pricecharting.com/game/gameboy/blue-game-boy-pocket" width="200" height="200"></a>
 </body>
 </html>
